--- a/indexattend.html
+++ b/indexattend.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATTENDANCE CALCULATOR</title>
-    <link rel="stylesheet" href="attend.css">
+    <link rel="stylesheet" href="styleattend.css">
 </head>
 <body>
     <div class="yes">
@@ -59,6 +59,6 @@
     </div>
     </div>
 
-    <script src="attend.js"></script>
+    <script src="scriptattend.js"></script>
 </body>
 </html>
